--- a/BasicDemo/pom.xml
+++ b/BasicDemo/pom.xml
@@ -18,6 +18,8 @@
         <maven.surefire.plugin.version>3.0.0-M7</maven.surefire.plugin.version>
         <maven.compiler.source.version>11</maven.compiler.source.version>
         <maven.compiler.target.version>11</maven.compiler.target.version>
+        <java.version>1.8</java.version>
+    
     </properties>
  
     <dependencies>
